Fixed home page padding too large

--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -83,7 +83,7 @@ pre
 .article-card
   padding-bottom: 20px
   &:first-child
-    margin-top: 80px
+    margin-top: 60px
 
 h2.article-head
   font-size: 1.6em
